--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -39,6 +39,22 @@
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter city</label>
+                        <input class="form-control" id="cityname" type="text" placeholder="naples">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="state">Enter state</label>
+                        <input class="form-control" id="state" type="text" placeholder="fl">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="country">Enter country</label>
+                        <input class="form-control" id="country" type="text" placeholder="US">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="shape">Enter a shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="sphere">
+                      </li>
                     </ul>
                   </div>
                   <button id="filter-btn" type="submit" class="btn btn-default">Filter Table</button>
