code for filtering data by shape

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -41,7 +41,7 @@
                       </li>
                       <li class="filter list-group-item">
                         <label for="city">Enter city</label>
-                        <input class="form-control" id="cityname" type="text" placeholder="naples">
+                        <input class="form-control" id="city" type="text" placeholder="naples">
                       </li>
                       <li class="filter list-group-item">
                         <label for="state">Enter state</label>
